--- a/.github/workflows/workflow.createprcomment.yml
+++ b/.github/workflows/workflow.createprcomment.yml
@@ -23,7 +23,9 @@ jobs:
           - windows-latest
         node-version: [10, 14]
     runs-on: ${{ matrix.os }}
-
+    defaults:
+      run:
+        working-directory: "CreatePrComment"
     steps:
     - uses: actions/checkout@v2
     - name: "Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}"
