--- a/.github/workflows/workflow.createprcomment.yml
+++ b/.github/workflows/workflow.createprcomment.yml
@@ -9,6 +9,9 @@ on:
       - "CreatePrComment/**"
   workflow_dispatch:
 
+env:
+  WORKDIR: "CreatePrComment"
+
 defaults:
   run:
     working-directory: "CreatePrComment"
@@ -23,9 +26,6 @@ jobs:
           - windows-latest
         node-version: [10, 14]
     runs-on: ${{ matrix.os }}
-    defaults:
-      run:
-        working-directory: "CreatePrComment"
     steps:
     - uses: actions/checkout@v2
     - name: "Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}"
@@ -33,6 +33,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: npm
+        cache-dependency-path: "${{ env.WORKDIR }}/package-lock.json"
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run test --if-present
