--- a/.github/workflows/workflow.createprcomment.yml
+++ b/.github/workflows/workflow.createprcomment.yml
@@ -1,10 +1,10 @@
-name: 'CreatePrComment'
+name: "CreatePrComment"
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths:
       - "CreatePrComment/**"
   workflow_dispatch:
@@ -27,14 +27,14 @@ jobs:
         node-version: [10, 14]
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
-    - name: "Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}"
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: npm
-        cache-dependency-path: "${{ env.WORKDIR }}/package-lock.json"
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm run test --if-present
-    - run: npm run report --if-present
+      - uses: actions/checkout@v3
+      - name: "Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}"
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: npm
+          cache-dependency-path: "${{ env.WORKDIR }}/package-lock.json"
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm run test --if-present
+      - run: npm run report --if-present
